# TJURM-Engineering

./: .gitignore  CMakeLists.txt  README.md  baseconfig  cali.py  readme  run.sh  test  test.cpp
config/: CamLens.json  param.json
include/aruco/: aruco_locate.h
include/cuda/: cudatool.h
include/data_manager/: base.h  param.h
include/data_manager/control/: control.h  crc.h  structure.h
include/locate/: dbscan.h  locate.h  tools.h
include/mining_tank/: detector.h  get_Four.h  get_V.h
src/: main.cpp
src/aruco/: aruco.cpp
src/cuda/: CMakeLists.txt  cuda.cu  cudatool.cu
src/data_manager/: CMakeLists.txt  base.cpp  init.cpp
src/data_manager/control/: control.cpp  crc.cpp  receive_thread.cpp  send_thread.cpp  shm.cpp  thread_control.cpp
src/locate/: CMakeLists.txt  dbscan.cpp  locate.cpp  tools.cpp
src/mining_tank/: CMakeLists.txt  detector.cpp  get_Four.cpp  get_V.cpp
